--- a/.github/workflows/typescript-build.yml
+++ b/.github/workflows/typescript-build.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build & Test
-        run: npm run build
+        run: npm run check && npm run build
