--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "gen:types": "openapi-typescript ./../openapi.json -o static/ts/types/api.d.ts",
         "format": "prettier --write .",
         "lint": "eslint --fix",
+        "check": "eslint . --max-warnings=0 && prettier --check .",
         "build": "npm run gen:types && npx vite build && npm run copy:assets && npm run copy:public",
         "verify": "npm run format && npm run lint"
     },
