--- a/.github/workflows/typescript-build.yml
+++ b/.github/workflows/typescript-build.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: 'node'
       - name: Install dependencies
+        working-directory: frontend
         run: npm install
       - name: Build & Test
+        working-directory: frontend
         run: npm run check && npm run build
