--- a/.github/workflows/typescript-build.yml
+++ b/.github/workflows/typescript-build.yml
@@ -21,4 +21,4 @@ jobs:
         run: npm install
       - name: Build & Test
         working-directory: frontend
-        run: npm run check && npm run build
+        run: npm run build && npm run check
