--- a/.github/workflows/auto-approve-merge.yml
+++ b/.github/workflows/auto-approve-merge.yml
@@ -16,17 +16,20 @@ jobs:
       PR_URL: ${{ github.event.pull_request.html_url }}
       PR_TITLE: ${{ github.event.pull_request.title }}
       HAS_LABEL: ${{ contains(github.event.pull_request.labels.*.name, 'auto-approve-merge') }}
-      AUTO_MERGE_DISABLED_EVENT: ${{ github.event.action == 'auto_merge_disabled' }}
+      IS_AUTO_MERGE_DISABLED_EVENT: ${{ github.event.action == 'auto_merge_disabled' }}
+      IS_LABEL_EVENT: ${{ github.event.action == 'labeled' || github.event.action == 'unlabeled' }}
+      IS_APPROVE_EVENT: ${{ github.event.action == 'labeled' || github.event.action == 'reopened' }}
+
     steps:
       - name: Auto Approve
-        if: env.HAS_LABEL == 'true'
+        if: env.HAS_LABEL == 'true' && env.IS_APPROVE_EVENT == 'true'
         run: gh pr review "$PR_URL" --approve
       - name: Enable Auto Merge
-        if: env.HAS_LABEL == 'true' && env.AUTO_MERGE_DISABLED_EVENT == 'false'
+        if: env.HAS_LABEL == 'true' && env.IS_AUTO_MERGE_DISABLED_EVENT == 'false'
         run: gh pr merge "$PR_URL" --auto --squash --body "$PR_TITLE"
       - name: Disable Auto Merge
         if: env.HAS_LABEL == 'false'
         run: gh pr merge "$PR_URL" --disable-auto
       - name: Remove Label
-        if: env.AUTO_MERGE_DISABLED_EVENT == 'true'
+        if: env.IS_AUTO_MERGE_DISABLED_EVENT == 'true'
         run: gh pr edit "$PR_URL" --remove-label "auto-approve-merge"
