--- a/.github/workflows/auto-approve-merge.yml
+++ b/.github/workflows/auto-approve-merge.yml
@@ -2,7 +2,7 @@ name: Auto Approve/Merge PR
 
 on:
   pull_request_target:
-    types: [opened, reopened, labeled, unlabeled, auto_merge_disabled]
+    types: [labeled, unlabeled, auto_merge_disabled]
 
 permissions:
   pull-requests: write
@@ -15,14 +15,21 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PR_URL: ${{ github.event.pull_request.html_url }}
       PR_TITLE: ${{ github.event.pull_request.title }}
+      ACTION: ${{github.event.action}}
       HAS_LABEL: ${{ contains(github.event.pull_request.labels.*.name, 'auto-approve-merge') }}
       IS_AUTO_MERGE_DISABLED_EVENT: ${{ github.event.action == 'auto_merge_disabled' }}
-      IS_LABEL_EVENT: ${{ github.event.action == 'labeled' || github.event.action == 'unlabeled' }}
-      IS_APPROVE_EVENT: ${{ github.event.action == 'labeled' || github.event.action == 'reopened' }}
+      IS_APPROVED: false
 
     steps:
+      - name: Set IS_APPROVED
+        run: |
+          if gh pr view "$PR_URL" --json reviews --jq '.reviews[].state' | grep -q "APPROVED"; then
+            echo "IS_APPROVED=true" >> $GITHUB_ENV
+          else
+            echo "IS_APPROVED=false" >> $GITHUB_ENV
+          fi
       - name: Auto Approve
-        if: env.HAS_LABEL == 'true' && env.IS_APPROVE_EVENT == 'true'
+        if: env.HAS_LABEL == 'true' && env.IS_APPROVED == 'false'
         run: gh pr review "$PR_URL" --approve
       - name: Enable Auto Merge
         if: env.HAS_LABEL == 'true' && env.IS_AUTO_MERGE_DISABLED_EVENT == 'false'
@@ -33,3 +40,8 @@ jobs:
       - name: Remove Label
         if: env.IS_AUTO_MERGE_DISABLED_EVENT == 'true'
         run: gh pr edit "$PR_URL" --remove-label "auto-approve-merge"
+      - name: Summary
+        run: |
+          echo "Running Auto Approve/Merge PR for action: '$ACTION' on '$PR_TITLE'"
+          echo "HAS_LABEL: $HAS_LABEL"
+          echo "IS_APPROVED: $IS_APPROVED"
