--- a/backend/modules/app/src/main/resources/application.yaml
+++ b/backend/modules/app/src/main/resources/application.yaml
@@ -15,9 +15,9 @@ server:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    path: /api/v1/docs
   swagger-ui:
-    path: /swagger-ui
+    path: /api/v1/swagger-ui
 
 service:
   worklog-service-impl:
