--- a/backend/gradle/libs.versions.toml
+++ b/backend/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 dotenv-kotlin = "6.5.1"
 h2-database = "2.4.240"
-h2-r2dbc = "1.0.0.RELEASE"
+h2-r2dbc = "1.1.0.BUILD-SNAPSHOT"
 jackson-module-kotlin = "3.0.0"
 jib = "3.4.5"
 junit-jupiter = "6.0.0"
