Update dependency com.ncorti.ktfmt.gradle:com.ncorti.ktfmt.gradle.gradle.plugin to v0.25.0 (#77)
Update dependency com.ncorti.ktfmt.gradle:com.ncorti.ktfmt.gradle.gradle.plugin to v0.25.0

--- a/backend/gradle/libs.versions.toml
+++ b/backend/gradle/libs.versions.toml
@@ -5,10 +5,10 @@ h2-r2dbc = "1.1.0.RELEASE"
 jackson-module-kotlin = "3.0.1"
 jib = "3.4.5"
 junit-jupiter = "6.0.0"
-kotlin = "2.2.21"
+kotlin = "2.3.0-Beta1"
 kotlin-logging-jvm = "7.0.13"
 kotlinx-coroutines = "1.10.2"
-ktfmt = "0.24.0"
+ktfmt = "0.25.0"
 logback = "1.5.20"
 netty-resolver-dns-native-macos = "4.2.7.Final"
 okhttp = "5.2.1"
