add conditional runs

--- a/.github/workflows/kotlin-build.yml
+++ b/.github/workflows/kotlin-build.yml
@@ -2,9 +2,12 @@ name: Kotlin Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
   pull_request:
-    branches: [ main ]
+    paths:
+      - '**'
+      - '!frontend/**'
 
 jobs:
   kotlin-build:
