--- a/.github/workflows/typescript-build.yml
+++ b/.github/workflows/typescript-build.yml
@@ -2,9 +2,12 @@ name: TypeScript Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
   pull_request:
-    branches: [ main ]
+    paths:
+      - '**'
+      - '!backend/**'
 
 jobs:
   typescript-build:
