--- a/backend/gradle/libs.versions.toml
+++ b/backend/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ reactor-kotlin-extensions = "1.3.0"
 reactor-test = "3.8.0"
 spring-boot = "4.0.0"
 springdoc-openapi-plugin = "1.9.0"
-springdoc-openapi-webflux = "3.0.0-RC1"
+springdoc-openapi-webflux = "3.0.0"
 swagger = "2.2.40"
 
 [libraries]
