--- a/.github/workflows/kotlin-build.yml
+++ b/.github/workflows/kotlin-build.yml
@@ -2,12 +2,9 @@ name: Kotlin Build
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ main ]
   pull_request:
-    paths:
-      - '**'
-      - '!frontend/**'
+    branches: [ main ]
 
 jobs:
   kotlin-build:
@@ -15,13 +12,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - name: Setup Eclipse Temurin 24
+        with:
+          fetch-depth: 2
+      - name: Check changes
+        id: changed-files
+        uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
+        with:
+          files_ignore: frontend/**
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Setup Eclipse Temurin 24
         uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
         with:
           distribution: 'temurin'
           java-version: 24
-      - name: Setup Gradle
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Setup Gradle
         uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
-      - name: Build & Test
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Build & Test
         working-directory: backend
         run: ./gradlew build
