--- a/.github/workflows/typescript-build.yml
+++ b/.github/workflows/typescript-build.yml
@@ -2,12 +2,9 @@ name: TypeScript Build
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ main ]
   pull_request:
-    paths:
-      - '**'
-      - '!backend/**'
+    branches: [ main ]
 
 jobs:
   typescript-build:
@@ -15,13 +12,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - name: Setup Node.js
+        with:
+          fetch-depth: 2
+      - name: Check changes
+        id: changed-files
+        uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
+        with:
+          files_ignore: backend/**
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Setup Node.js
         uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
         with:
           node-version: 'node'
-      - name: Install dependencies
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Install dependencies
         working-directory: frontend
         run: npm install
-      - name: Build & Test
+      - if: github.event_name == 'push' || steps.changed-files.outputs.any_changed == 'true'
+        name: Build & Test
         working-directory: frontend
         run: npm run build && npm run check
