--- a/backend/gradle/libs.versions.toml
+++ b/backend/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ netty-resolver-dns-native-macos = "4.2.9.Final"
 okhttp = "5.3.2"
 reactor-kotlin-extensions = "1.3.0"
 reactor-test = "3.8.1"
+semver = "0.1.0-SNAPSHOT"
 spring-boot = "4.0.1"
 springdoc-openapi-plugin = "1.9.0"
 springdoc-openapi-webflux = "3.0.1"
